--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,6 +1,6 @@
 ---
 # Derived from https://github.com/cta-observatory/project-template-python-pure/blob/main/.github/workflows/pypi.yml
-name: Deploy to PyPi
+name: Deploy to PyPI
 
 on:
   workflow_dispatch:
