--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ optional-dependencies."tests" = [
 urls."bug tracker" = "https://github.com/Eventdisplay/Eventdisplay-ML/issues"
 urls."documentation" = "https://github.com/Eventdisplay/Eventdisplay-ML"
 urls."repository" = "https://github.com/Eventdisplay/Eventdisplay-ML"
+scripts.eventdisplay-ml-apply-xgb-stereo-analysis = "eventdisplay_ml.apply_xgboost_stereo:main"
 scripts.eventdisplay-ml-train-xgb-stereo-analysis = "eventdisplay_ml.train_xgb_stereo_analysis:main"
 
 [tool.setuptools]
