--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,8 @@ optional-dependencies."tests" = [
 urls."bug tracker" = "https://github.com/Eventdisplay/Eventdisplay-ML/issues"
 urls."documentation" = "https://github.com/Eventdisplay/Eventdisplay-ML"
 urls."repository" = "https://github.com/Eventdisplay/Eventdisplay-ML"
-scripts.eventdisplay-ml-apply-xgb-stereo = "eventdisplay_ml.apply_xgb_stereo:main"
-scripts.eventdisplay-ml-train-xgb-stereo = "eventdisplay_ml.train_xgb_stereo:main"
+scripts.eventdisplay-ml-apply-xgb-stereo = "eventdisplay_ml.scripts.apply_xgb_stereo:main"
+scripts.eventdisplay-ml-train-xgb-stereo = "eventdisplay_ml.scripts.train_xgb_stereo:main"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
