--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,9 @@ lint.ignore = [
 
 lint.pydocstyle.convention = "numpy"
 
+[tool.ruff.lint.per-file-ignores]
+"tests/**.py" = ["D103"]
+
 [tool.codespell]
 ignore-words-list = "chec,arrang,livetime"
 
